fix word wrapping in Countries navbar menu

--- a/ufcroster/static/css/styles.css
+++ b/ufcroster/static/css/styles.css
@@ -154,6 +154,10 @@ footer {
     white-space: normal;
 }
 
+.text-nowrap {
+    white-space: nowrap;
+}
+
 .ur-shadow {
     box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
 }
